2012-10-17: Add order_loop under meshing
2012-08-02: Fixed a bug mk_GREIT_model for opt.square_pixels = 1
2012-07-13: Toggle cache status on specific functions
2012-07-07: ======================== RELEASE 3.6 =========================
2012-07-03: GN absolute solvers (i)  Constrained optimization on conductivity
                                (ii) Prior conductivity at each iteration
2012-07-03: Higher order FEM solvers (on voltage) for forward problem and Jacobian
2012-07-03: Bugs fixed for electrode movement for CEM
2012-07-02: significantly improved 3D visualization
2012-07-02: 4D solver +  tutorials 
2012-07-01: Analytic tetrahedron intersection for accurate c2f calcs
2012-06-30: added calc_colours.component parameter for real or imag images
2012-06-30: added electrode support in gmsh code 
2012-06-30: added geophysics simulation for surface electrode array
2012-06-30: eidors_msg will print the calling function automatically
2012-06-30: eidors_cache can clean up named parts of the cache
2012-06-30: Function defaults
	    Models now use 'eidors_default' instead of a particular solver.
	    Defaults are set in eidors_startup.
2012-06-30: Started changelog